--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,17 +1,27 @@
+asn1crypto==0.24.0
 blessings==1.6.1
 bpython==0.17.1
 certifi==2018.4.16
+cffi==1.11.5
 chardet==3.0.4
+cryptography==2.2.2
 curtsies==0.3.0
 dj-database-url==0.5.0
 Django==1.11.8
 django-crispy-forms==1.7.2
+django-tenant-schemas==1.9.0
+enum34==1.1.6
 greenlet==0.4.13
 gunicorn==19.8.1
 idna==2.6
+ipaddress==1.0.22
+ndg-httpsclient==0.5.0
 Pillow==5.1.0
 psycopg2==2.7.4
+pyasn1==0.4.3
+pycparser==2.18
 Pygments==2.2.0
+pyOpenSSL==18.0.0
 pytz==2018.4
 requests==2.18.4
 six==1.11.0
